Implement base navigation modular

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,14 +14,26 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CleanArchitectureMovie"
         tools:targetApi="31">
+<!--        <activity-->
+<!--            android:name=".presentation.ui.MainActivity"-->
+<!--            android:exported="true">-->
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
+
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
+<!--        </activity>-->
+
         <activity
-            android:name=".presentation.ui.MainActivity"
+            android:name="com.example.commonui.RootActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+            <nav-graph android:value="@navigation/main_nav_graph" />
         </activity>
     </application>
 
